# clickhouse-udf-rs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  clippy.toml  deny.toml  rustfmt.toml
.claude/: ralph-circuit.local.json  ralph-loop.local.md
.github/workflows/: build-test.yaml  cargo-clippy.yaml  cargo-fmt.yaml  clickhouse-integration.yaml  coverage.yaml  msrv.yaml  release.yaml  security-audit.yaml
array/: Cargo.toml  udf_config.toml
array/benches/: topk.rs
array/src/: lib.rs
docs/: LLM_UDF_IDEAS.md
integration-tests/: README.md  run-tests.sh
integration-tests/config/: array_function.xml  string_function.xml  tiktoken_function.xml  udf_config.xml  url_function.xml  vin_function.xml  wkt_function.xml
integration-tests/sql/: test_array.expected  test_array.sql  test_string.expected  test_string.sql  test_tiktoken.expected  test_tiktoken.sql  test_url.expected  test_url.sql  test_vin.expected  test_vin.sql  test_wkt.expected  test_wkt.sql
llm/: Cargo.toml
llm/src/: lib.rs
shared/: Cargo.toml  README.md
shared/src/: io.rs  lib.rs
string/: Cargo.toml
string/benches/: string_bench.rs
string/src/: lib.rs
tiktoken/: Cargo.toml  README.md  udf_config.toml
tiktoken/src/: lib.rs  tiktoken.rs
url/: Cargo.toml  udf_config.toml
url/benches/: url_bench.rs
url/src/: lib.rs  url.rs
vin/: Cargo.toml  udf_config.toml
vin/benches/: vin.rs
vin/src/: lib.rs  vin.rs  wmi.csv
wkt/: Cargo.toml  udf_config.toml
wkt/benches/: wkt.rs
wkt/src/: lib.rs  parse_wkt.rs
