[workspace]
members = ["wkt", "vin", "shared", "url", "string", "array", "tiktoken"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.82"
regex = "1.10.4"
shared = { path = "./shared" }
topk = "0.7.0"
tiktoken-rs = "0.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
