[workspace]
members = ["wkt", "vin", "shared", "url", "string", "array", "tiktoken", "llm"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.82"
regex = "1.10.4"
shared = { path = "./shared" }
tiktoken-rs = "0.9"

# Optimize release builds for smaller binaries and better performance
[profile.release]
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization at cost of compile time
strip = true         # Strip symbols from binary
opt-level = 3        # Maximum optimization level
panic = "abort"      # Reduce binary size

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
