[package]
name = "array"
version = "0.1.0"
edition = "2021"
authors = ["Duyet Le <me@duyet.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "array-topk"
path = "src/bin/topk.rs"

[[bench]]
name = "topk"
harness = false

[dependencies]
anyhow = "1.0.82"
geo-types = "0.7.13"
shared = { path = "../shared" }
topk = "0.5.0"
wkt = "0.10.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
