[package]
name = "array"
version = "0.1.0"
edition = "2021"
authors = ["Duyet Le <me@duyet.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "array-topk"
path = "src/bin/topk.rs"

[dependencies]
anyhow.workspace = true
shared = { path = "../shared" }
topk.workspace = true

[dev-dependencies]
