[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "readme-generator"
path = "src/bin/readme-generator.rs"

[dependencies]
anyhow = "1.0.81"
cargo_toml = "0.19.2"
change-case = "0.2.0"
serde = { version = "^1.0.197", features = ["derive"] }
tera = "1.19.1"
