[package]
name = "string"
version = "0.1.0"
edition = "2021"

[[bin]]
name = 'string-format'
path = 'src/bin/string-format.rs'

[[bin]]
name = 'extract-phone'
path = 'src/bin/extract-phone.rs'

[dependencies]
anyhow = "1.0.82"
once_cell = "1.21.3"
regex = "1.10.4"
shared = { path = "../shared" }

[[bench]]
name = "string_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
