[package]
name = "tiktoken"
version = "0.1.0"
edition = "2021"
description = "ClickHouse UDF for GPT tokenization using tiktoken"
license = "MIT"
repository = "https://github.com/duyet/clickhouse-udf-rs"

[[bin]]
name = 'tiktoken-count'
path = 'src/bin/tiktoken-count.rs'

[[bin]]
name = 'tiktoken-encode'
path = 'src/bin/tiktoken-encode.rs'

[dependencies]
anyhow.workspace = true
shared.workspace = true
tiktoken-rs.workspace = true
