[package]
name = "url"
version = "0.1.0"
edition = "2021"

[[bin]]
name = 'extract-url'
path = 'src/bin/extract-url.rs'

[[bin]]
name = 'has-url'
path = 'src/bin/has-url.rs'

[[bench]]
name = "url_bench"
harness = false

[dependencies]
anyhow = "1.0.82"
shared = { path = "../shared" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
