[package]
name = "vin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vin-cleaner"
path = "src/bin/vin-cleaner.rs"

[[bin]]
name = "vin-cleaner-chunk-header"
path = "src/bin/vin-cleaner-chunk-header.rs"

[[bin]]
name = "vin-year"
path = "src/bin/vin-year.rs"

[[bin]]
name = "vin-year-chunk-header"
path = "src/bin/vin-year-chunk-header.rs"

[[bin]]
name = "vin-manuf"
path = "src/bin/vin-manuf.rs"

[[bin]]
name = "vin-manuf-chunk-header"
path = "src/bin/vin-manuf-chunk-header.rs"

[[bench]]
name = "vin"
harness = false

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
csv = "1.3.0"
once_cell = "1.19.0"
regex = "1.10.4"
shared = { path = "../shared" }

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }

