[package]
name = "parse_wkt"
version = "0.1.0"
edition = "2021"
authors = ["Duyet Le <me@duyet.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "read-wkt-linestring"
path = "src/bin/read-wkt-linestring.rs"

[[bench]]
name = "wkt"
harness = false

[dependencies]
anyhow.workspace = true
geo-types = "0.7.13"
shared.workspace = true
wkt = "0.14.0"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
